--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -44,11 +44,23 @@
 		</dependencies>
 	</dependencyManagement>
 
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.8.0</version>
+				<configuration>
+					<from><image>openjdk:17-jdk-slim</image></from>
+					<to>
+					<image>docker.io/shekharkumargupta/gateway-service</image>
+					</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
