--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -29,7 +29,7 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
+<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -41,11 +41,23 @@
 		</dependencies>
 	</dependencyManagement>
 
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>2.8.0</version>
+				<configuration>
+					<from><image>openjdk:17-jdk-slim</image></from>
+					<to>
+					<image>docker.io/shekharkumargupta/discovery-service</image>
+					</to>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
