--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
     gateway:
       routes:
         - id: product-route
-          uri: http://localhost:8082
+          uri: http://ms-product-service:8082
           predicates:
             - Path=/products/**
 
         - id: order-route
-          uri: http://localhost:8081
+          uri: http://ms-order-service:8081
           predicates:
             - Path=/orders/**
 
