changed the service route URL in gateway-service to learn security on local

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,5 @@
 version: '1.1'
 services:
-  keycloak:
-    container_name: keycloak
-    image: keycloak/keycloak
-    restart: always
-    environment:
-      - KEYCLOAK_USER=admin
-      - KEYCLOAK_PASSWORD=admin
-      - KEYCLOAK_EXTRA_ARGS="-Dkeycloak.profile.feature.upload_scripts=enabled"
-    ports:
-      - "8181:8080"
-    depends_on:
-      - keycloak-db
-    networks:
-      - microservices-net
-
-  keycloak-db:
-    image: postgres
-    environment:
-      - POSTGRES_DB=keycloak
-      - POSTGRES_USER=keycloak
-      - POSTGRES_PASSWORD=password
-    networks:
-      - microservices-net
-
   discovery:
     container_name: ms-discovery-service
     image: shekharkumargupta/discovery-service
@@ -46,7 +22,7 @@ services:
     networks:
       - microservices-net
     restart: unless-stopped
-    links:
+    depends_on:
       - discovery
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery:8761/eureka
@@ -63,8 +39,8 @@ services:
     networks:
       - microservices-net
     restart: unless-stopped
-    links:
-      - discovery
+    depends_on:
+      - gateway
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery:8761/eureka
       SERVER_PORT: 8082
@@ -81,8 +57,8 @@ services:
     networks:
       - microservices-net
     restart: unless-stopped
-    links:
-      - discovery	
+    depends_on:
+      - products
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://discovery:8761/eureka
       SERVER_PORT: 8081
