--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -30,7 +30,6 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>2.2.1.RELEASE</version>
 		</dependency>
 		<!--
 		<dependency>
@@ -40,6 +39,13 @@
 			<optional>true</optional>
 		</dependency>
 		-->
+
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-loadbalancer</artifactId>
+		    <version>4.1.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -98,6 +104,14 @@
 					<image>docker.io/shekharkumargupta/order-service</image>
 					</to>
 				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
