--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -41,6 +41,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-loadbalancer</artifactId>
+		    <version>4.1.3</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
