--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -10,19 +10,19 @@ spring:
     gateway:
       routes:
         - id: product-route
-          uri: http://localhost:8082
+          uri: http://products:8082
           predicates:
             - Path=/products/**
 
         - id: order-route
-          uri: http://localhost:8081
+          uri: http://orders:8081
           predicates:
             - Path=/orders/**
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery:8761/eureka
     register-with-eureka: true
 
 
