--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
           uri: http://orders:8081
           predicates:
             - Path=/orders/**
+            
+        - id: customer-route
+          uri: http://customers:8083
+          predicates:
+            - Path=/customers/**
+
 
 eureka:
   client:
