--- a/product-service/src/main/resources/application-dev.yml
+++ b/product-service/src/main/resources/application-dev.yml
@@ -1,4 +1,10 @@
+server:
+  port: 8082
+
 spring:
-  cloud:
-    discovery:
-      enabled: false
+  application:
+    name: product-service
+
+eureka:
+  client:
+    enabled: false
