working on security

--- a/product-service/src/main/resources/application-dev.yml
+++ b/product-service/src/main/resources/application-dev.yml
@@ -5,6 +5,8 @@ spring:
   application:
     name: product-service
 
+
 eureka:
   client:
-    enabled: false
+    service-url:
+      defaultZone: http://localhost:8761/eureka
