--- a/gateway-service/src/main/resources/application-dev.yml
+++ b/gateway-service/src/main/resources/application-dev.yml
@@ -10,19 +10,24 @@ spring:
     gateway:
       routes:
         - id: product-route
-          uri: http://products:8082
+          uri: http://localhost:8082
           predicates:
             - Path=/products/**
 
         - id: order-route
-          uri: http://orders:8081
+          uri: http://localhost:8081
           predicates:
             - Path=/orders/**
-            
+
         - id: customer-route
-          uri: http://customers:8083
+          uri: http://localhost:8083
           predicates:
             - Path=/customers/**
+
+        - id: hello-route
+          uri: http://localhost:8222
+          predicates:
+            - Path=/hello/**
 
   security:
     user:
@@ -32,7 +37,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://discovery:8761/eureka
+      defaultZone: http://localhost:8761/eureka
     register-with-eureka: true
 
 
