--- a/discovery-service.yml
+++ b/discovery-service.yml
@@ -29,8 +29,8 @@ metadata:
 spec:
     selector:
       app: discovery
-    type: LoadBalancer
+    type: NodePort
     ports:
       - protocol: TCP
         port: 8761
-        targetPort: 8761
+        nodePort: 30001
