--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -4,10 +4,13 @@ server:
 spring:
   application:
     name: product-service
+  cloud:
+    discovery:
+      enabled: true
 
 eureka:
   client:
     service-url:
-      defaultZone: http://discovery:8761/eureka
+      defaultZone: http://localhost:8761/eureka
 
 
