--- a/product-service/src/main/resources/application-dev.yml
+++ b/product-service/src/main/resources/application-dev.yml
@@ -4,11 +4,11 @@ server:
 spring:
   application:
     name: product-service
-  cloud:
-    discovery:
-      enabled: false
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#  cloud:
+#    discovery:
+#      enabled: false
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
