--- a/playground/product-service.yml
+++ b/playground/product-service.yml
@@ -7,6 +7,14 @@ spec:
   selector:
     matchLabels:
       app: products
+  revisionHistoryLimit:5
+  progressDeadlineSeconds: 300
+  minReadySeconds: 10
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
@@ -20,3 +28,5 @@ spec:
           value: dev
         ports:
           - containerPort: 8082
+          
+          
