--- a/product-service.yml
+++ b/product-service.yml
@@ -9,14 +9,6 @@ spec:
   selector:
     matchLabels:
       app: products
-  revisionHistoryLimit: 5
-  progressDeadlineSeconds: 300
-  minReadySeconds: 10
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
   template:
     metadata:
       labels:
@@ -24,7 +16,7 @@ spec:
     spec:
       containers:
       - name: products
-        image: shekharkumargupta/product-service:latest
+        image: shekharkumargupta/product-service
         ports:
           - containerPort: 8082
 
