--- a/playground/product-service.yml
+++ b/playground/product-service.yml
@@ -30,3 +30,18 @@ spec:
           - containerPort: 8082
           
           
+---
+apiVersion: v1
+kind: service
+metadata:
+  name: product-service
+  labels:
+    app: products
+spec:
+  type: NodePort
+  ports:
+  - port: 8080
+    nodePort: 30001
+    protocol: TCP
+  selector:
+    app: products
