inmemory basic security applied to gateway service

--- a/gateway-service/src/main/resources/application-dev.yml
+++ b/gateway-service/src/main/resources/application-dev.yml
@@ -29,16 +29,14 @@ spring:
           predicates:
             - Path=/hello/**
 
-  security:
-    user:
-      password: admin
 
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    register-with-eureka: true
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+#    register-with-eureka: true
 
 
 
