--- a/product-service/src/main/resources/application-dev.yml
+++ b/product-service/src/main/resources/application-dev.yml
@@ -1,6 +1,12 @@
 server:
   port: 8082
 
+springdoc:
+  api-docs:
+    path: /swagger
+  swagger-ui:
+    path: /swagger.html
+
 spring:
   application:
     name: product-service
