--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.skcodify</groupId>
 	<artifactId>customer-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>order-service</name>
+	<name>customer-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
