--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -4,10 +4,10 @@ spring:
 
 server:
   port: 8081
-eureka:
-  client:
-    service-url:
-      defaultZone: http://discovery:8761/eureka
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://discovery:8761/eureka
 
 
 
