--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,20 +1,14 @@
 server:
   port: 8222
 
-jwt:
-  secret: ZDOAhj93i3I9mpNWIkOWRewrgchfgwrx
-  expiration: 10
-
 spring:
   application:
     name: gateway-service
-  main:
-    allow-bean-definition-overriding: true
   cloud:
     gateway:
       routes:
         - id: product-route
-          uri: http://localhost:8082
+          uri: http://localhost:8082/
           predicates:
             - Path=/products/**
 
@@ -22,23 +16,17 @@ spring:
           uri: http://localhost:8081
           predicates:
             - Path=/orders/**
-            
+
         - id: customer-route
           uri: http://localhost:8083
           predicates:
             - Path=/customers/**
-
-#  security:
-#    user:
-#      name: admin
-#      password: admin
 
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
-    register-with-eureka: true
 
 
 
