Added kubernetes manifest file for auth-service

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>auth-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>auth-service</name>
-	<description>learning security</description>
+	<description>auth service</description>
 	<url/>
 	<licenses>
 		<license/>
