--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -8,3 +8,8 @@ spring:
 jwt:
   secret: ZDOAhj93i3I9mpNWIkOWRewrgchfgwrx
   expiration: 10
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
