Gateway added routes for auth-service

--- a/auth-service.yml
+++ b/auth-service.yml
@@ -1,36 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: products
+  name: auth
   labels:
-    app: products
+    app: auth
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: products
+      app: auth
   template:
     metadata:
       labels:
-        app: products
+        app: auth
     spec:
       containers:
-      - name: products
-        image: shekharkumargupta/product-service
+      - name: auth
+        image: shekharkumargupta/auth-service
         ports:
-          - containerPort: 8082
+          - containerPort: 8080
 
 ---
 
 apiVersion: v1
 kind: Service
 metadata:
-  name: products
+  name: auth
 spec:
     selector:
-      app: products
+      app: auth
     type: LoadBalancer
     ports:
       - protocol: TCP
-        port: 8082
-        targetPort: 8082
+        port: 8080
+        targetPort: 8080
