--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -36,6 +36,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-netflix-hystrix</artifactId>
+			<version>2.2.1.RELEASE</version>
+		</dependency>
 
 		<!-- JAXB API -->
 		<!-- JAXB Core Implementation -->
