--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,31 +1,38 @@
 server:
   port: 8222
 
+jwt:
+  secret: ZDOAhj93i3I9mpNWIkOWRewrgchfgwrx
+  expiration: 10
+
 spring:
   application:
     name: gateway-service
   cloud:
     gateway:
-      routes:
-        - id: auth-route
-          uri: http://localhost:8080/
-          predicates:
-            - Path=/auth/**
-
-        - id: product-route
-          uri: http://localhost:8082/
-          predicates:
-            - Path=/products/**
-
-        - id: order-route
-          uri: http://localhost:8081
-          predicates:
-            - Path=/orders/**
-
-        - id: customer-route
-          uri: http://localhost:8083
-          predicates:
-            - Path=/customers/**
+      discovery:
+        locator:
+          enabled: true
+#      routes:
+#        - id: auth-route
+#          uri: http://localhost:8080/
+#          predicates:
+#            - Path=/auth/**
+#
+#        - id: product-route
+#          uri: http://localhost:8082/
+#          predicates:
+#            - Path=/products/**
+#
+#        - id: order-route
+#          uri: http://localhost:8081
+#          predicates:
+#            - Path=/orders/**
+#
+#        - id: customer-route
+#          uri: http://localhost:8083
+#          predicates:
+#            - Path=/customers/**
 
 
 eureka:
